@Review Ola, Gustav * Small css fixes. * Fixed Scrollbar
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/unionvms-web@887 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/app/app.less
+++ b/app/app.less
@@ -63,7 +63,7 @@
 body{
     width: 100%;
     background-color: #ffffff;
-    font-family: Arial; /*Lato,*/ 
+    font-family: Lato, Arial; 
 
 }
 
