--- a/app/less/common.less
+++ b/app/less/common.less
@@ -207,3 +207,17 @@ a:hover{
 .grayBorderBottom{
    border-bottom:1px solid #DDD;
 }
+
+body::-webkit-scrollbar {
+    width: 8px;
+}
+ 
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    width: 4px;
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: #ECEFEF;
+  outline: 1px solid #E4E4E4;
+}
